# pyhomeworks

./: .gitignore  Dist.sh  Push.sh  README.md  pyproject.toml  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: pythonpublish.yml  release-drafter.yml  test.yml
examples/: test.py
ha/: sample.yaml
pyhomeworks/: Dist  Push  Push.sh  __init__.py  controller.py  exceptions.py  homekeypad.py  homelights.py  pyhomeworks.py  sample.yaml  test.py
pyhomeworks/ha/: homeworks.py
pyhomeworks/ha/binary_sensor/: homeworks.py
pyhomeworks/ha/light/: homeworks.py
